--- a/plugins/dynamix/Credits.page
+++ b/plugins/dynamix/Credits.page
@@ -2,25 +2,25 @@ Menu="About"
 Title="Credits"
 Tag="diamond"
 ---
-**unRAID webGUI** Copyright &copy; 2005-2017, [Lime Technology, Inc.](http://lime-technology.com).
+**Unraid webGUI** Copyright &copy; 2005-2018, [Lime Technology, Inc.](http://lime-technology.com).
 
-**Dynamix** Copyright &copy; 2012-2017, Bergware International.
+**Dynamix** Copyright &copy; 2012-2018, Bergware International.
 
 **Extended Docker Configuration Page** Copyright &copy; 2014-2017, Guilherme Jardim.
 
-**VM Manager** Copyright &copy; 2015-2017, Eric Schultz, Derek Macias.
+**VM Manager** Copyright &copy; 2015-2018, Eric Schultz, Derek Macias.
 
 **APC UPS Configuration Page** Copyright &copy; 2015, Dan Landon.
 
 **Simple Features** Copyright &copy; 2012, Andrew Hamer-Adams. 
 
-The Software comprising the unRAID webGui, which is all files within this repository except for
+The Software comprising the Unraid webGui, which is all files within this repository except for
 files listed below, is licensed under GPL version 2.
 
 * The Lime Technology logo file(s) `webGui/images/limetech-*.*` are property of Lime Technology, Inc.
 and may not be used in any other project without written permission from Lime Technology, Inc.
 
-**unRAID**&reg; is a registered trademark of [Lime Technology, Inc.](http://lime-technology.com).
+**Unraid**&reg; is a registered trademark of [Lime Technology, Inc.](http://lime-technology.com).
 
 This file shall be included in all copies or substantial portions of the Software.
 
