--- a/plugins/dynamix/Diagnostics.page
+++ b/plugins/dynamix/Diagnostics.page
@@ -44,7 +44,7 @@ function diagnostics() {
 <div class="spinner" style="display:none"></div>
 <div id="pleaseWait" style="display:none;font-weight:bold;color:red;text-align:center;margin:0">Please wait... collecting diagnostic information (this may take several minutes)</div>
 This utility is used for troubleshooting purposes. It will collect all of the system information and configuration files, and package these files in a single ZIP file which can be saved locally.
-Subsequently, this file can be included in your correspondence with Limetech or the unRAID forum.
+Subsequently, this file can be included in your correspondence with Limetech or the Unraid forum.
 
 This will help others to quickly get the inside information of your system and provide better support to your problem. The following information
 and configuration files are collected:
@@ -71,7 +71,7 @@ and configuration files are collected:
 Clicking **Download** will start the collection process and then instruct your browser to save the zip file locally.
 
 *No personal information such as user names, passwords, or any other file contents not specified above is included
-by unRAID Server OS; however, your server name, IP address, and user share names* **will** *be included.*
+by Unraid OS; however, your server name, IP address, and user share names* **will** *be included.*
 
 *Note that 3rd-party plugins **may** or may not store personal information in plugin-specific configuration files and/or output
 to the system log.*
