--- a/plugins/dynamix/DisplaySettings.page
+++ b/plugins/dynamix/DisplaySettings.page
@@ -26,7 +26,7 @@ span#dropbox{margin-right:20px;}
 i.top{position:absolute;padding-left:4px;cursor:pointer;}
 </style>
 
-<script src="/webGui/javascript/jquery.filedrop.js"></script>
+<script src="<?autov('/webGui/javascript/jquery.filedrop.js')?>"></script>
 <script>
 var path = '/boot/config/plugins/dynamix';
 var filename = '';
