--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -33,7 +33,7 @@ $title   = 'Global Configuration';
 $menu    = 'menu default';
 $mark    = 'label ';
 ?>
-<link type="text/css" rel="stylesheet" href="/webGui/styles/jquery.switchbutton.css">
+<link type="text/css" rel="stylesheet" href="<?autov('/webGui/styles/jquery.switchbutton.css')?>">
 <style>
 div.basic{display:block}
 div.advanced{display:none}
