--- a/plugins/dynamix/CPUset.page
+++ b/plugins/dynamix/CPUset.page
@@ -1,8 +1,9 @@
 Menu="OtherSettings"
 Title="CPU Pinning"
+Type="xmenu"
 Icon="grid.png"
 Tag="map-marker"
-Cond="pgrep('libvirtd')!==false || pgrep('dockerd')!==false"
+Tabs="true"
 ---
 <?PHP
 /* Copyright 2005-2018, Lime Technology
@@ -44,6 +45,7 @@ function create() {
 }
 ?>
 <style>
+form{margin-bottom:20px}
 table.tablesorter tr>th+th{text-align:right;vertical-align:top}
 table.tablesorter tr>td+td+td{vertical-align:top}
 table.tablesorter tr>th+th+th,table.tablesorter tr>td+td{text-align:center}
@@ -96,7 +98,11 @@ function apply(form) {
             $('#'+id+'-'+reply.success.stripper()).hide('slow');
             // cleanup when all is done
             if (!--wait) {
-              setTimeout(function(){$('#wait-'+id).hide();},500);
+              if (id == 'is') {
+                $('#wait-is').html('<strong>Reboot system to make new settings active!</strong>');
+              } else {
+                setTimeout(function(){$('#wait-'+id).hide();},500);
+              }
               $('input[value="Done"]').prop('disabled',false);
             }
           }
@@ -126,6 +132,13 @@ function ct() {
     buttons(document.ct);
   });
 }
+function is() {
+  // fetch the current isolcpu assignments
+  $.post('/webGui/include/CPUset.php',{id:'is',cpus:'<?=$cpuset?>'},function(d){
+    $('#table-is').html(d);
+    buttons(document.is);
+  });
+}
 function reset(form) {
   // undo changes without a complete refresh of the page
   $(form).find('input[value="Apply"]').prop('disabled',true);
@@ -133,14 +146,18 @@ function reset(form) {
   switch ($(form).prop('name')) {
     case 'vm': $('#table-vm').html("<?=$spinner?>"); $('div.spinner').html(unraid_logo); vm(); break;
     case 'ct': $('#table-ct').html("<?=$spinner?>"); $('div.spinner').html(unraid_logo); ct(); break;
+    case 'is': $('#table-is').html("<?=$spinner?>"); $('div.spinner').html(unraid_logo); is(); break;
   }
 }
 function buttons(form) {
   $(form).find('input[type=checkbox]').each(function(){$(this).on('change',function(){
+    var total = $(form).find('input[type=checkbox]').length;
     var checked = 'input[name^="'+$(this).prop('name').split(':')[0]+':'+'"]:checked';
     var cores = $(form).find(checked).length;
     // vms must have at least one core selected
     if ($(form).prop('name')=='vm') $(form).find(checked).prop('disabled',cores<2);
+    // isolation may not have all cores selected
+    if ($(form).prop('name')=='is' && $(this).prop('checked')) $(this).prop('checked',cores<total);
     // we need the Apply and Done buttons react on checkbox changes
     $(form).find('input[value="Apply"]').prop('disabled',false);
     $(form).find('input[value="Done"]').val('Reset').prop('onclick',null).off('click').click(function(){reset(form);});
@@ -153,21 +170,13 @@ $(function(){
 <?if ($dockerd):?>
   ct();
 <?endif;?>
+  is();
 });
 </script>
 
-> This page gives a total view of the current CPU pinning assignments for both VMs and Docker containers.<br>
-> It also allows to modify these assignments.
->
-> Running VMs or containers are **stopped first** and restarted after the modification.<br>
-> Stopped VMs or containers are instantly modified and new assignments become active when the user manually starts the VM or container.
->
-> When ***Apply*** is pressed a scan is performed to find the changes, subsequently only VMs or containers which have changes are modified in parallel.
->
-> *Please wait until all updates are finished*.
->
-> By default NO cores are selected for a Docker container, which means it uses all available cores.<br>
-> **Do not select ALL cores, just select NONE**
+<?if (!$libvirtd && !$dockerd):?>
+<div class="notice">No CPU pinning available. VM service or Docker service must be started</div>
+<?endif;?>
 
 <?if ($libvirtd):?>
 <form name="vm">
@@ -178,8 +187,8 @@ $(function(){
 </table>
 <input type="button" value="Apply" onclick="apply(this.form)" disabled><input type="button" value="Done" onclick="done()"><span id="wait-vm" class="red-text" style="display:none"><i class="fa fa-spinner fa-spin"></i> Please wait...</span>
 </form>
-<br>
 <?endif;?>
+
 <?if ($dockerd):?>
 <form name="ct">
 <input type="hidden" name="names" id="names-ct" value="">
@@ -190,3 +199,16 @@ $(function(){
 <input type="button" value="Apply" onclick="apply(this.form)" disabled><input type="button" value="Done" onclick="done()"><span id="wait-ct" class="red-text" style="display:none"><i class="fa fa-spinner fa-spin"></i> Please wait...</span>
 </form>
 <?endif;?>
+
+> This page gives a total view of the current CPU pinning assignments for both VMs and Docker containers.<br>
+> It also allows to modify these assignments.
+>
+> Running VMs or containers are **stopped first** and restarted after the modification.<br>
+> Stopped VMs or containers are instantly modified and new assignments become active when the user manually starts the VM or container.
+>
+> When ***Apply*** is pressed a scan is performed to find the changes, subsequently only VMs or containers which have changes are modified in parallel.
+>
+> *Important: Please wait until all updates are finished before leaving this page*.
+>
+> By default NO cores are selected for a Docker container, which means it uses all available cores.<br>
+> Do not select **ALL** cores for containers, just select **NO** cores if you want unrestricted core use.
